--- a/templates/tutorial/view_chapter.html
+++ b/templates/tutorial/view_chapter.html
@@ -1,118 +1,137 @@
-{% extends "tutorial/base.html" %} 
+{% extends "tutorial/base.html" %}
+{% load set %}
+
 
 {% block title %}
-{{ chapter.title }} ({{ chapter.part.tutorial.title }})
-{% endblock %}
-
-{% block headline %}
-    <h1 class="illu">
-        {% if chapter.image %}
-            <img src="{{chapter.image.thumb.url }}" alt=""/>
-        {% endif %}
-        {{ chapter.title }}
-    </h1>
-    {% if chapter.tutorial %}
-            <ul class="taglist">
-        {% for category in chapter.tutorial.subcategory.all %}
-            <li><a href="#">{{ category.title }}</a></li>
-        {% endfor %}
-        </ul>
-        <div class="authors content-wrapper">
-            <span class="authors-label">Auteurs : </span>
-            <ul>
-            {% for member in chapter.tutorial.authors.all %}
-                <li>
-                    {% include "member/member_item_common.part.html" %}
-                </li>
-            {% endfor %}.
-            </ul>
-        </div>
-    {% else %}
-            <ul class="taglist">
-            {% for category in chapter.part.tutorial.subcategory.all %}
-            <li><a href="#">{{ category.title }}</a></li>
-        {% endfor %}
-        </ul>
-        <div class="authors content-wrapper">
-            <span class="authors-label">Auteurs : </span>
-            <ul>
-            {% for member in chapter.part.tutorial.authors.all %}
-                <li>
-                    {% include "member/member_item_common.part.html" %}
-                </li>
-            {% endfor %}.
-            </ul>
-        </div>
-    {% endif %}
-{% endblock %}
-
-
-{% block headline-sub-actions %}
-    {% if user in chapter.part.tutorial.authors.all or user in chapter.tutorial.authors.all %}
-        <li><a href="{% url "zds.tutorial.views.edit_chapter" %}?chapitre={{ chapter.pk }}&version={{version}}" class="button">Éditer le chapître</a></li>
-        <li><a href="{% url "zds.tutorial.views.add_extract" %}?chapitre={{ chapter.pk }}">Ajouter un extrait</a></li>
-        <form action="{% url "zds.tutorial.views.modify_chapter" %}" method="POST">
-            {% if chapter.part %}
-            <li><button type="submit" name="delete">Supprimer</button></li>
-            {% endif %}
-            <input type="hidden" name="chapter" value="{{ chapter.pk }}" />
-            {% csrf_token %}
-        </form>
-        {% if chapter.part %}
-        <form action="{% url "zds.tutorial.views.modify_chapter" %}" method="POST" class="custom">
-            <select name="move_target" class="select-autosubmit">
-                <option>Déplacer</option>
-            {% if chapter.position_in_part > 1 %}
-                <option value="{{ chapter.position_in_part|add:"-1" }}">Monter</option>
-            {% endif %}
-            {% if chapter.position_in_part < chapter.part.get_chapters.count %}
-                <option value="{{ chapter.position_in_part|add:"1" }}">Descendre</option>
-            {% endif %}
-                <option disabled>&mdash; Déplacer avant</option>
-            {% for chapter_mv in chapter.part.get_chapters %}
-                {% if chapter != chapter_mv and chapter_mv.position_in_part|add:"-1" != chapter.position_in_part %}
-                <option value="{% if chapter_mv.position_in_part < chapter.position_in_part %}{{ chapter_mv.position_in_part }}{% else %}{{ chapter_mv.position_in_part|add:"-1" }}{% endif %}">
-                        Chapitre {{ chapter_mv.position_in_part }} : {{ chapter_mv.title }}
-                </option>
-                {% endif %}
-            {% endfor %}
-            <option disabled>&mdash; Déplacer après</option>
-            {% for chapter_mv in chapter.part.get_chapters %}
-                {% if chapter != chapter_mv and chapter_mv.position_in_part|add:"1" != chapter.position_in_part %}
-                <option value="{% if chapter_mv.position_in_part < chapter.position_in_part %}{{ chapter_mv.position_in_part|add:"1" }}{% else %}{{ chapter_mv.position_in_part }}{% endif %}">
-                        Chapitre {{ chapter_mv.position_in_part }} : {{ chapter_mv.title }}
-                </option>
-                {% endif %}
-            {% endfor %}
-            </select>
-            <noscript>
-                <button type="submit" class="button">
-                    Déplacer
-                </button>
-            </noscript>
-
-            <input type="hidden" name="move" value="" />
-            <input type="hidden" name="chapter" value="{{ chapter.pk }}" />
-            {% csrf_token %}
-        </form>
-        {% endif %}
-    {% endif %}
+    {{ chapter.title }} ({{ chapter.part.tutorial.title }})
 {% endblock %}
 
 {% block breadcrumb %}
     <li><a href="{{ chapter.part.tutorial.get_absolute_url }}?version={{version}}">{{ chapter.part.tutorial.title }}</a></li>
     <li><a href="{{ chapter.part.get_absolute_url }}?version={{version}}">{{ chapter.part.title }}</a></li>
-    <li class="current"><a href="#">{{ chapter.title }}</a></li>
+    <li class="current">{{ chapter.title }}</li>
 {% endblock %}
+
+{% block headline %}
+    <h1 class="illu">
+        {% if chapter.image %}
+            <img src="{{chapter.image.thumb.url }}" alt="">
+        {% endif %}
+        {{ chapter.title }}
+    </h1>
+
+    {% if chapter.tutorial %}
+        {% set chapter.tutorial as tutorial %}
+    {% else %}
+        {% set chapter.part.tutorial as tutorial %}
+    {% endif %}
+    
+    <ul class="taglist">
+        {% for category in tutorial.subcategory.all %}
+            {# TODO : Mettre le lien des tags #}
+            <li><a href="#">{{ category.title }}</a></li>
+        {% endfor %}
+    </ul>
+
+    <div class="authors content-wrapper">
+        <span class="authors-label">Auteurs : </span>
+        <ul>
+            {% for member in tutorial.authors.all %}
+                <li>
+                    {% include "member/member_item_common.part.html" %}
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
+{% endblock %}
+
+
+{% block headline-sub-actions %}
+    {% if user in chapter.part.tutorial.authors.all or user in chapter.tutorial.authors.all %}
+        <li>
+            <a href="{% url "zds.tutorial.views.edit_chapter" %}?chapitre={{ chapter.pk }}&version={{version}}">
+                Éditer le chapître
+            </a>
+        </li>
+        <li>
+            <a href="{% url "zds.tutorial.views.add_extract" %}?chapitre={{ chapter.pk }}">
+                Ajouter un extrait
+            </a>
+        </li>
+        <form action="{% url "zds.tutorial.views.modify_chapter" %}" method="POST">
+            {% if chapter.part %}
+                <li>
+                    <button type="submit" name="delete">Supprimer</button>
+                </li>
+            {% endif %}
+
+            <input type="hidden" name="chapter" value="{{ chapter.pk }}">
+            {% csrf_token %}
+        </form>
+
+        {% if chapter.part %}
+            <form action="{% url "zds.tutorial.views.modify_chapter" %}" method="POST">
+                <select name="move_target" class="select-autosubmit">
+                    <option>
+                        Déplacer
+                    </option>
+
+                    {% if chapter.position_in_part > 1 %}
+                        <option value="{{ chapter.position_in_part|add:"-1" }}">
+                            Monter
+                        </option>
+                    {% endif %}
+
+                    {% if chapter.position_in_part < chapter.part.get_chapters.count %}
+                        <option value="{{ chapter.position_in_part|add:"1" }}">
+                            Descendre
+                        </option>
+                    {% endif %}
+
+                    <option disabled>&mdash; Déplacer avant</option>
+
+                    {% for chapter_mv in chapter.part.get_chapters %}
+                        {% if chapter != chapter_mv and chapter_mv.position_in_part|add:"-1" != chapter.position_in_part %}
+                            <option value="{% if chapter_mv.position_in_part < chapter.position_in_part %}{{ chapter_mv.position_in_part }}{% else %}{{ chapter_mv.position_in_part|add:"-1" }}{% endif %}">
+                                Chapitre {{ chapter_mv.position_in_part }} : {{ chapter_mv.title }}
+                            </option>
+                        {% endif %}
+                    {% endfor %}
+
+                    <option disabled>&mdash; Déplacer après</option>
+
+                    {% for chapter_mv in chapter.part.get_chapters %}
+                        {% if chapter != chapter_mv and chapter_mv.position_in_part|add:"1" != chapter.position_in_part %}
+                            <option value="{% if chapter_mv.position_in_part < chapter.position_in_part %}{{ chapter_mv.position_in_part|add:"1" }}{% else %}{{ chapter_mv.position_in_part }}{% endif %}">
+                                Chapitre {{ chapter_mv.position_in_part }} : {{ chapter_mv.title }}
+                            </option>
+                        {% endif %}
+                    {% endfor %}
+                </select>
+
+                <noscript>
+                    <button type="submit" class="button">
+                        Déplacer
+                    </button>
+                </noscript>
+
+                <input type="hidden" name="move" value="">
+                <input type="hidden" name="chapter" value="{{ chapter.pk }}">
+                {% csrf_token %}
+            </form>
+        {% endif %}
+    {% endif %}
+{% endblock %}
+
 
 {% block content %}
 
-{% with tutorial=chapter.get_tutorial %}
-    {% with authors=tutorial.authors.all %}
-        {% include "tutorial/view_chapter_pager.html" %}
-        {% include "tutorial/view_chapter_common.part.html" %}
-        {% include "tutorial/view_chapter_pager.html" %}
+    {% with tutorial=chapter.get_tutorial %}
+        {% with authors=tutorial.authors.all %}
+            {% include "tutorial/view_chapter_pager.html" %}
+            {% include "tutorial/view_chapter_common.part.html" %}
+            {% include "tutorial/view_chapter_pager.html" %}
+        {% endwith %}
     {% endwith %}
-{% endwith %}
 
 {% endblock %}
