--- a/templates/tutorial/base.html
+++ b/templates/tutorial/base.html
@@ -14,8 +14,12 @@
 
 {% block content_out %}
     <article>
-        <header>{% block headline %}{% endblock %}</header>
-        <section class="article-content content-wrapper">{% block content %}{% endblock %}</section>
+        <header>
+            {% block headline %}{% endblock %}
+        </header>
+        <section class="article-content content-wrapper">
+            {% block content %}{% endblock %}
+        </section>
     </article>
 {% endblock %}
 
@@ -23,25 +27,49 @@
 {% block sidebar %}
 <aside class="sidebar sommaire mobile-menu-hide">
     <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions">
-        <h3>Actions<span class="wide"> sur les tutoriels</span></h3>
-        <ul>
+        <h3>Actions <span class="wide">sur les tutoriels</span></h3>
+        <ul class="sidebar-standalone">
             <li><a href="{% url "zds.tutorial.views.add_tutorial" %}">Nouveau tutoriel</a></li>
             {% block headline-sub-actions %}{% endblock %}
         </ul>
     </div>
+
 	{% block headline-actions %}{% endblock %}
+
     <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Télécharger">
-    	<h3><span class="wide">Télécharger</span></h3>
-        <ul class="sidebar-standalone mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Téléchargements">
+    	<h3>Télécharger</h3>
+        <ul class="sidebar-standalone">
             {% if tutorial.on_line %}
-        	{% if perms.tutorial.change_tutorial %}
-        	<li><a href="{% url "zds.tutorial.views.download_markdown" %}?tutoriel={{ tutorial.pk }}">Markdown</a></li>
-        	{% endif %}
-            <li><a href="{% url "zds.tutorial.views.download_html" %}?tutoriel={{ tutorial.pk }}">HTML</a></li>
-            <li><a href="{% url "zds.tutorial.views.download_pdf" %}?tutoriel={{ tutorial.pk }}">PDF</a></li>
-            <li><a href="{% url "zds.tutorial.views.download_epub" %}?tutoriel={{ tutorial.pk }}">EPUB</a></li>
+            	{% if perms.tutorial.change_tutorial %}
+            	   <li>
+                    <a href="{% url "zds.tutorial.views.download_markdown" %}?tutoriel={{ tutorial.pk }}">
+                        Markdown
+                    </a>
+                </li>
+            	{% endif %}
+
+                <li>
+                    <a href="{% url "zds.tutorial.views.download_html" %}?tutoriel={{ tutorial.pk }}">
+                        HTML
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url "zds.tutorial.views.download_pdf" %}?tutoriel={{ tutorial.pk }}">
+                        PDF
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url "zds.tutorial.views.download_epub" %}?tutoriel={{ tutorial.pk }}">
+                        EPUB
+                    </a>
+                </li>
             {% endif %}
-            <li><a href="{% url "zds.tutorial.views.download" %}?tutoriel={{ tutorial.pk }}">Archive</a></li>
+
+            <li>
+                <a href="{% url "zds.tutorial.views.download" %}?tutoriel={{ tutorial.pk }}">
+                    Archive
+                </a>
+            </li>
         </ul>
     </div>
 </aside>
