--- a/templates/tutorial/index_member.html
+++ b/templates/tutorial/index_member.html
@@ -1,4 +1,4 @@
-{% extends "tutorial/index.html" %}
+    {% extends "tutorial/index.html" %}
 {% load humane_date %}
 
 {% block headline-sub-actions %}
@@ -27,7 +27,7 @@
 {% block content %}
 
     {% if tutorials %}
-    {% for tuto in tutorials %}
+        {% for tuto in tutorials %}
         <article>
             <a href="{{ tuto.get_absolute_url }}">
                 {% if tuto.image %}
@@ -41,9 +41,11 @@
                 </div>
             </a>
         </article>
-    {% endfor %}
+        {% endfor %}
     {% else %}
-    <p>Aucun tutoriel disponible.</p>
+        <p>
+            Aucun tutoriel disponible.
+        </p>
     {% endif %}
 
 {% endblock %}
