--- a/templates/403.html
+++ b/templates/403.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block headline %}
-    Erreur 403
+    <h2 class="box">Erreur 403</h2>
 {% endblock %}
 
 {% block breadcrumb %}
@@ -15,7 +15,7 @@
 {% block content %}
 <div class="row">
     <div class="large-12 columns">
-        <p>Il semblerait que vous n'ayez pas les accès pour vous rendre à cet endroit.</p>
+        <p class="alert-box alert">Il semblerait que vous n'ayez pas les accès pour vous rendre à cet endroit.</p>
     </div>
 </div>
 {% endblock %}
