--- a/templates/404.html
+++ b/templates/404.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block headline %}
-    Erreur 404
+    <h2 class="box">Erreur 404</h2>
 {% endblock %}
 
 {% block breadcrumb %}
@@ -15,7 +15,7 @@
 {% block content %}
 <div class="row">
     <div class="large-12 columns">
-        <p>Il semblerait que ce que vous cherchiez ne se trouve plus ici.</p>
+        <p class="alert-box alert">Il semblerait que ce que vous cherchiez ne se trouve plus ici.</p>
     </div>
 </div>
 {% endblock %}
