--- a/templates/forum/details.html
+++ b/templates/forum/details.html
@@ -5,8 +5,8 @@
     {{ forum.title }}
 {% endblock %}
 
-{% block headline %}
-    <h2 class="box forum">{{ forum.title }}</h2>
+{% block head-title %}
+    {{ forum.title }}
 {% endblock %}
 
 {% block headline-sub %}
