--- a/templates/forum/index.html
+++ b/templates/forum/index.html
@@ -12,8 +12,8 @@
     communauté." />
 {% endblock %}
 
-{% block headline %}
-   <h2 class="box forum">Liste des forums</h2>
+{% block head-title %}
+   Liste des forums
 {% endblock %}
 
 {% block breadcrumb %}
