--- a/templates/forum/previsualization.part.html
+++ b/templates/forum/previsualization.part.html
@@ -1,8 +1,9 @@
 {% load emarkdown %}
+<h5>Prévisualisation de votre message</h5>
 <div class="row" id="previsualisation">
-    <div class="large-12 columns">
-        <div class="panel">
-            <h5>Prévisualisation de votre message</h5>
+    <div class="large-12 columns read-content">
+        <div>
+            
             {{ text|emarkdown }}
         </div>
     </div>
