--- a/templates/mp/answer.html
+++ b/templates/mp/answer.html
@@ -5,12 +5,12 @@
     Répondre au MP
 {% endblock %}
 
-{% block headline %}
-    <h2>Répondre au MP : {{topic.title}}</h2>
+{% block head-title %}
+    Répondre au MP : {{topic.title}}
 {% endblock %}
 
 {% block headline-sub %}
-    <h3 class="subtitle">{{ topic.subtitle }}</h3>
+    {{ topic.subtitle }}
 {% endblock %}
 
 {% block breadcrumb %}
