--- a/templates/mp/edit_post.html
+++ b/templates/mp/edit_post.html
@@ -5,12 +5,12 @@
     Éditer un message
 {% endblock %}
 
-{% block headline %}
-    <h2>Éditer un message : {{topic.title}}</h2>
+{% block head-title %}
+    Éditer un message : {{topic.title}}
 {% endblock %}
 
 {% block headline-sub %}
-    <h3 class="subtitle">{{ topic.subtitle }}</h3>
+    {{ topic.subtitle }}
 {% endblock %}
 
 {% block breadcrumb %}
