--- a/templates/500.html
+++ b/templates/500.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block headline %}
-    Erreur 500
+    <h2 class="box">Erreur 500</h2>
 {% endblock %}
 
 {% block breadcrumb %}
@@ -15,7 +15,7 @@
 {% block content %}
 <div class="row">
     <div class="large-12 columns">
-        <p>
+        <p class="alert-box alert">
             Si vous voyez cette page, c'est que vous avez trouvé un bug. Merci
             de reporter cette erreur en expliquant comment vous avez procédé
             pour tomber sur cette page.
