--- a/templates/forum/followed_topics.html
+++ b/templates/forum/followed_topics.html
@@ -4,8 +4,8 @@
   Notifications du Forum
 {% endblock %}
 
-{% block headline %}
-  <h2 class="box forum">Notifications du Forum</h2>
+{% block head-title %}
+  Notifications du Forum
 {% endblock %}
 
 {% block breadcrumb %}
@@ -13,10 +13,15 @@
 {% endblock %}
 
 {% block content %}
-    {% for topic in followed_topics %}
-        {% include "forum/details_row.part.html" %}
-    {% endfor %}
-    
+<div>
+    <table class="topics-entries">
+      <tbody>
+	    {% for topic in followed_topics %}
+	        {% include "forum/details_row.part.html" %}
+	    {% endfor %}
+      </tbody>
+    </table>
+</div>
     {% include "forum/topic_pagination.part.html" with position="bottom" %}
 
 {% endblock %}
