--- a/templates/tutorial/view_chapter_online_pager.html
+++ b/templates/tutorial/view_chapter_online_pager.html
@@ -2,7 +2,7 @@
     <div class="large-6 columns">
         {% if prev %}
             <a class="button secondary" href="{{ prev.get_absolute_url_online }}">
-                « {{ prev.title }}
+                <i class="fi-arrow-left"></i> {{ prev.title }}
             </a>
         {% endif %}
     </div>
@@ -10,7 +10,7 @@
         <div class="right">
             {% if next %}
                 <a class="button secondary" href="{{ next.get_absolute_url_online }}">
-                    {{ next.title }} »
+                    {{ next.title }} <i class="fi-arrow-right"></i>
                 </a>
             {% endif %}
         </div>
