Refacto errors pages

--- a/templates/403.html
+++ b/templates/403.html
@@ -9,13 +9,11 @@
 {% endblock %}
 
 {% block breadcrumb %}
-    <li class="current"><a href="#">Erreur 403</a></li>
+    <li class="current">Erreur 403</li>
 {% endblock %}
 
 {% block content %}
-<div class="row">
-    <div class="large-12 columns">
-        <p>Il semblerait que vous n'ayez pas les accès pour vous rendre à cet endroit.</p>
-    </div>
-</div>
+    <p>
+    	Vous n'avez pas les droits suffisants pour accéder à cette page.
+    </p>
 {% endblock %}
