--- a/templates/404.html
+++ b/templates/404.html
@@ -9,13 +9,11 @@
 {% endblock %}
 
 {% block breadcrumb %}
-    <li class="current"><a href="#">Erreur 404</a></li>
+    <li class="current">Erreur 404</li>
 {% endblock %}
 
 {% block content %}
-<div class="row">
-    <div class="large-12 columns">
-        <p>Il semblerait que ce que vous cherchiez ne se trouve plus ici.</p>
-    </div>
-</div>
+	<p>
+		Il semblerait que ce que vous cherchiez ne se trouve plus ici.
+	</p>
 {% endblock %}
