--- a/templates/500.html
+++ b/templates/500.html
@@ -9,17 +9,12 @@
 {% endblock %}
 
 {% block breadcrumb %}
-    <li class="current"><a href="#">Erreur 500</a></li>
+    <li class="current">Erreur 500</li>
 {% endblock %}
 
 {% block content %}
-<div class="row">
-    <div class="large-12 columns">
-        <p>
-            Si vous voyez cette page, c'est que vous avez trouvé un bug. Merci
-            de reporter cette erreur en expliquant comment vous avez procédé
-            pour tomber sur cette page.
-        </p>
-    </div>
-</div>
+    <p>
+        Vous avez trouvé un bug. Merci de reporter cette erreur en expliquant 
+        comment vous avez procédé pour arriver sur cette page.
+    </p>
 {% endblock %}
