--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,8 @@
 {% endblock %}
 
 {% block meta %}
-    <meta name="description" content="Bienvenue sur ZesteDeSavoir, une communauté" />
+    {# TODO : Mettre une meilleur description #}
+    <meta name="description" content="Bienvenue sur ZesteDeSavoir, une communauté">
 {% endblock %}
 
 {% block sidebar %}
